@@ -44,6 +44,7 @@ left_shoulder = down
 left_trigger = toggle_autofire
 right_trigger = autofire
 select_button = pause
+start_button = menu_alt
 
 [amigacd32]
 dpad_left = left
